[tool.poetry]
name = "cron-ext"
version = "0.0.1"
description = "`cron-ext` is a Meltano utility extension that provides basic job scheduling via CRON."
authors = ["Meltano <hello@meltano.com>"]
license = "MIT"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/meltano/basic-python-template/issues"
"Twitter" = "https://twitter.com/meltanodata/"
"Changelog" = "https://github.com/meltano/basic-python-template/blob/main/CHANGELOG.md"
"Slack" = "https://meltano.com/slack"
"Youtube" = "https://www.youtube.com/meltano"

[tool.poetry.dependencies]
cached-property = "^1" # Remove after Python 3.7 support is dropped
click = "^8.1.3"
meltano-edk = {git = "https://github.com/meltano/edk.git", rev = "main"}
pydantic = "^1.9.0"
python = ">=3.7,<3.11"
PyYAML = "^6.0.0"
structlog = "^21.2.0"
typer = "^0.6.1"

[tool.poetry.group.dev.dependencies]
coverage = "^6.4"
# Depend on meltano@main until the next release post 2.6.0 because of dependency conflicts
meltano = {git = "https://github.com/meltano/meltano.git", rev = "main"}
pytest = "^7.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent

[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
exclude = [
    'tests',
]

[tool.pytest.ini_options]
addopts = "-ra -vvv"

[build-system]
requires = ["poetry-core~=1.1.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "cron_ext" }
]

[tool.poetry.scripts]
cron = 'cron_ext.main:app'
