[tool.poetry]
name = "cron-ext"
version = "0.1.0"
description = "`cron-ext` is a Meltano utility extension that provides basic job scheduling via cron."
authors = ["Meltano <hello@meltano.com>"]
license = "MIT"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/meltano/basic-python-template/issues"
"Twitter" = "https://twitter.com/meltanodata/"
"Changelog" = "https://github.com/meltano/basic-python-template/blob/main/CHANGELOG.md"
"Slack" = "https://meltano.com/slack"
"Youtube" = "https://www.youtube.com/meltano"

[tool.poetry.dependencies]
cached-property = "^1" # Remove after Python 3.7 support is dropped
python = ">=3.7,<3.12"
typer = "^0.12.3"
typing-extensions = "^4.7"
meltano-edk = {git = "https://github.com/meltano/edk.git", rev = "v0.1.0"}

[tool.poetry.group.dev.dependencies]
coverage = "^7.2"
meltano = "^2.17"
pytest = "^7.4"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent

[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
exclude = [
    'tests',
]

[tool.pytest.ini_options]
addopts = "-ra -vvv"

[build-system]
requires = ["poetry-core==1.5.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "cron_ext" }
]

[tool.poetry.scripts]
cron = 'cron_ext.main:app'
